compiler-tests/src/test/data/diagnostic/inject/member/FunctionMemberInjectsCannotHaveTypeParams.kt
class Example {
  @Inject fun <!MEMBERS_INJECT_TYPE_PARAMETERS_ERROR!><T><!> injectedFunction(value: T) {

  }
}

/* GENERATED_FIR_TAGS: classDeclaration, functionDeclaration, nullableType, typeParameter */
